scroll bar issue fixed

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #371e4c; }
+  background: #e2f209; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #a8e233; }
+  background: #e2f9ae; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #ec5d14; }
+  background: #48e5c7; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #248a88; }
+  background: #2e1852; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #c45d64; }
+  background: #de495f; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #25dddf; }
+  background: #2ea86b; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #64cf30; }
+  background: #f5301c; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #876c9b; }
+  background: #4a382c; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #e84dbf; }
+  background: #bf7776; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #53aa72; }
+  background: #df7a13; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #081ab5; }
+  background: #8f5226; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #0dc056; }
+  background: #a5631b; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #d5e614; }
+  background: #6f640d; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #d610c1; }
+  background: #465cfb; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #58f0d2; }
+  background: #6c22ef; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #d8c323; }
+  background: #094d14; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #c9922d; }
+  background: #fe8901; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #4117dd; }
+  background: #d640df; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #f93982; }
+  background: #95955a; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #0f9470; }
+  background: #137f11; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #955538; }
+  background: #69e6af; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #797604; }
+  background: #101806; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #748c78; }
+  background: #583fc1; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #885faa; }
+  background: #d6b2da; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #923aab; }
+  background: #86859b; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #e8645d; }
+  background: #28c37a; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #afe285; }
+  background: #91d87f; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #aaf8c0; }
+  background: #1c259f; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #43f583; }
+  background: #251b4a; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #c0042d; }
+  background: #52ac06; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #0e5c35; }
+  background: #17a0bb; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #37d4a5; }
+  background: #d72ca3; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #5c587c; }
+  background: #263a2d; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #0f9d12; }
+  background: #d95fca; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #470521; }
+  background: #947036; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #732c94; }
+  background: #71c42c; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #5b8dbf; }
+  background: #3dd497; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #ade444; }
+  background: #02c12a; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #d0b47b; }
+  background: #e4125e; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #766415; }
+  background: #36532b; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #9834de; }
+  background: #7c4f72; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #bcc44c; }
+  background: #8c2030; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #ab83ca; }
+  background: #87617b; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #7d238f; }
+  background: #88fb42; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #250344; }
+  background: #25090f; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #922494; }
+  background: #6bd044; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #054c19; }
+  background: #f9db3b; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #c016af; }
+  background: #5924f6; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #fe9968; }
+  background: #22dc95; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #1fb56b; }
+  background: #c08942; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #beb3f1; }
+  background: #b1e346; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #097f61; }
+  background: #556fe1; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #47dd02; }
+  background: #eeb03b; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #ddfc10; }
+  background: #cd15f6; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #1c9b0d; }
+  background: #e7c54e; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #f1e39c; }
+  background: #d2d005; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #4e0dd0; }
+  background: #5e9fea; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #5d62c0; }
+  background: #0a0665; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #d83c85; }
+  background: #e2c0e1; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #a106de; }
+  background: #a01028; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #49f40d; }
+  background: #de2fce; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #2d5893; }
+  background: #c61f58; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #5fd717; }
+  background: #5b6a41; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #aa1eb8; }
+  background: #37a003; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #455170; }
+  background: #e11d0f; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #46c6d7; }
+  background: #ae6c27; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #d92a61; }
+  background: #98e1db; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #6dcc34; }
+  background: #a36be3; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #1558a1; }
+  background: #acdacc; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #d02441; }
+  background: #a8b7e1; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #6a23a2; }
+  background: #796926; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #e9ffa5; }
+  background: #49cdb2; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #f04268; }
+  background: #bd4402; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #5d4090; }
+  background: #f31bd0; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #c8bf0f; }
+  background: #57f4f5; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #f0bf7d; }
+  background: #44e450; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #cb158d; }
+  background: #170f62; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #87ac05; }
+  background: #c32a81; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #a6a4e2; }
+  background: #3a439d; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #e4dedb; }
+  background: #7849b0; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #63397c; }
+  background: #28dc58; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #6fc144; }
+  background: #fd582d; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #34f726; }
+  background: #d1a007; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #5e809f; }
+  background: #02a403; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #b5109d; }
+  background: #7e9db9; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #c8c410; }
+  background: #23e2b3; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #1dab5f; }
+  background: #08e910; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #03d6a9; }
+  background: #43d67b; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #4efc0c; }
+  background: #aae92b; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #8a6b83; }
+  background: #efea45; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #47fd12; }
+  background: #595e79; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #2ea06a; }
+  background: #0f9885; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #365f8f; }
+  background: #20c473; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #938f38; }
+  background: #5cc39c; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #70fb48; }
+  background: #5bb0fb; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #58a147; }
+  background: #25901e; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #b5e1f6; }
+  background: #197010; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #6e79be; }
+  background: #145136; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #80fce8; }
+  background: #7f42bc; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #862521; }
+  background: #bf8670; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11505,11 +11505,15 @@ input:checked + .sliders:before {
 .role-to-txt h2 {
   padding-left: 35px; }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
+.modal-add-connections-wrapper
+.adding-adapter-modal-header
+.adapter-modal-logo {
   height: 55px !important;
   width: 55px !important; }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
+.modal-add-connections-wrapper
+.adding-adapter-modal-header
+.adapter-modal-name {
   font-size: 20px !important; }
 
 .modal-add-connections-wrapper input[type="text"] {
@@ -12536,7 +12540,8 @@ td .check-container {
   padding-bottom: 0px;
   padding: 0px;
   position: absolute;
-  border-radius: 0px 0px 6px 6px; }
+  border-radius: 0px 0px 6px 6px;
+  overflow: hidden; }
 
 .notifi-scroll {
   height: 390px;
