--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -69,7 +69,7 @@
   margin: 1rem 0rem;
 }
 
-.center-y h3+a {
+.center-y h3 + a {
   font-size: 1.6rem;
   display: inline-block;
   color: #000;
@@ -99,7 +99,7 @@
 }
 
 h3,
-h3+a {
+h3 + a {
   // opacity: 0;
   // -webkit-transition: opacity 0.7s 0s, -webkit-transform 0.5s 0.2s;
   // transition: opacity 0.7s 0s, -webkit-transform 0.5s 0.2s;
@@ -110,7 +110,7 @@ h3+a {
 }
 
 li.current h3,
-li.current h3+a {
+li.current h3 + a {
   // opacity: 1;
   // -webkit-transition-delay: 1s;
   // transition-delay: 1s;
@@ -188,7 +188,6 @@ li.prev {
 
 .modal-add-connections-wrapper,
 .LoginPanel {
-
   input[type="text"],
   input[type="password"],
   textarea {
@@ -208,7 +207,8 @@ li.prev {
     line-height: 1em;
     width: 100%;
     -moz-appearance: none;
-    background: #fff url(../images/drop-arrow-green.png) no-repeat scroll 97% 13px;
+    background: #fff url(../images/drop-arrow-green.png) no-repeat scroll 97%
+      13px;
     box-sizing: border-box;
     cursor: pointer;
   }
@@ -261,7 +261,7 @@ li.prev {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.LoginPanel .fieldsBotSection input[type="checkbox"]:checked+label {
+.LoginPanel .fieldsBotSection input[type="checkbox"]:checked + label {
   background-image: url(../images/checkbox-img.png);
 }
 
@@ -274,7 +274,7 @@ li.prev {
   right: 22px;
 }
 
-.LoginPanel .login-pass-div input[type="checkbox"]:checked+label {
+.LoginPanel .login-pass-div input[type="checkbox"]:checked + label {
   background-image: url(../images/eye-dark.png);
 }
 
@@ -595,15 +595,15 @@ input[type="submit"] {
   transition: 0.4s;
 }
 
-input:checked+.sliders {
+input:checked + .sliders {
   background-color: #776fff;
 }
 
-input:focus+.sliders {
+input:focus + .sliders {
   box-shadow: 0 0 1px #776fff;
 }
 
-input:checked+.sliders:before {
+input:checked + .sliders:before {
   -webkit-transform: translateX(20px);
   -ms-transform: translateX(20px);
   transform: translateX(20px);
@@ -675,7 +675,7 @@ input:checked+.sliders:before {
 }
 
 .table-icon span,
-.table-icon span+span {
+.table-icon span + span {
   letter-spacing: 4px;
   font-size: 18px;
 }
@@ -725,12 +725,16 @@ input:checked+.sliders:before {
   padding-left: 35px;
 }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
+.modal-add-connections-wrapper
+  .adding-adapter-modal-header
+  .adapter-modal-logo {
   height: 55px !important;
   width: 55px !important;
 }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
+.modal-add-connections-wrapper
+  .adding-adapter-modal-header
+  .adapter-modal-name {
   font-size: 20px !important;
 }
 
@@ -743,7 +747,7 @@ input:checked+.sliders:before {
   width: 100%;
 }
 
-.modal-add-connections-wrapper .adapter-modal-bottom-row div+div {
+.modal-add-connections-wrapper .adapter-modal-bottom-row div + div {
   margin-right: 0px;
 }
 
@@ -921,8 +925,8 @@ input:checked+.sliders:before {
     font-size: 14px;
   }
 
-  .dropdown-with-img-select div+div,
-  .dropdown-with-logos div+div {
+  .dropdown-with-img-select div + div,
+  .dropdown-with-logos div + div {
     font-size: 12px;
   }
 
@@ -1238,11 +1242,11 @@ input:checked+.sliders:before {
   background: dodgerblue;
 }
 
-.list-ic .active~li {
+.list-ic .active ~ li {
   background: lightblue;
 }
 
-.list-ic .active~li::before {
+.list-ic .active ~ li::before {
   background: lightblue;
 }
 
@@ -1464,15 +1468,15 @@ input:checked+.sliders:before {
   transition: 0.4s;
 }
 
-input:checked+.sliderss {
+input:checked + .sliderss {
   background-color: #776fff;
 }
 
-input:focus+.sliderss {
+input:focus + .sliderss {
   box-shadow: 0 0 1px #776fff;
 }
 
-input:checked+.sliderss:before {
+input:checked + .sliderss:before {
   -webkit-transform: translateX(44px);
   -ms-transform: translateX(44px);
   transform: translateX(44px);
@@ -1494,7 +1498,7 @@ input:checked+.sliderss:before {
   font-family: Verdana, sans-serif;
 }
 
-input:checked+.sliderss .on {
+input:checked + .sliderss .on {
   display: block;
   font-size: 14px;
   padding-left: 10px;
@@ -1502,7 +1506,7 @@ input:checked+.sliderss .on {
   left: 26%;
 }
 
-input:checked+.sliderss .off {
+input:checked + .sliderss .off {
   display: none;
 }
 
@@ -1543,11 +1547,11 @@ input:checked+.sliderss .off {
     transition: 0.4s;
   }
 
-  input:checked+.sliders-Not {
+  input:checked + .sliders-Not {
     background-color: #776fff;
   }
 
-  input:focus+.sliders-Not {
+  input:focus + .sliders-Not {
     box-shadow: 0 0 1px #776fff;
   }
 }
@@ -1581,7 +1585,7 @@ input:checked+.sliderss .off {
   margin-right: 10px;
 }
 
-input:checked+.sliders-Not .not-white-bg {
+input:checked + .sliders-Not .not-white-bg {
   display: block;
   color: #fff;
   background-color: #776fff;
@@ -1592,7 +1596,7 @@ input:checked+.sliders-Not .not-white-bg {
   // left: 26%;
 }
 
-input:checked+.sliders-Not .not-blue-bg {
+input:checked + .sliders-Not .not-blue-bg {
   display: none;
 }
 
@@ -1777,14 +1781,14 @@ input:checked+.sliders-Not .not-blue-bg {
 }
 
 /* On mouse-over, add a grey background color */
-.check-container:hover input~.checkmark {
+.check-container:hover input ~ .checkmark {
   background-color: #fff;
   border: 1px solid #717171;
   border-radius: 6px;
 }
 
 /* When the checkbox is checked, add a blue background */
-.check-container input:checked~.checkmark {
+.check-container input:checked ~ .checkmark {
   background-color: #717171;
   border: 1px solid #717171;
   border-radius: 6px;
@@ -1798,7 +1802,7 @@ input:checked+.sliders-Not .not-blue-bg {
 }
 
 /* Show the checkmark when checked */
-.check-container input:checked~.checkmark:after {
+.check-container input:checked ~ .checkmark:after {
   display: block;
 }
 
@@ -1847,14 +1851,14 @@ td {
     font-family: Verdana, sans-serif;
   }
 
-  input:checked+.sliderss .on {
+  input:checked + .sliderss .on {
     display: block;
     font-size: 14px;
     padding-left: 10px;
     left: 10%;
   }
 
-  input:checked+.sliderss::before {
+  input:checked + .sliderss::before {
     -webkit-transform: translateX(57px);
     -ms-transform: translateX(57px);
     transform: translateX(57px);
@@ -2008,12 +2012,12 @@ td {
 /* Create a custom checkbox */
 
 /* On mouse-over, add a grey background color */
-.container-custom-checkbox:hover input~.checkmark {
+.container-custom-checkbox:hover input ~ .checkmark {
   background-color: #ccc;
 }
 
 /* When the checkbox is checked, add a blue background */
-.container-custom-checkbox input:checked~.checkmark {
+.container-custom-checkbox input:checked ~ .checkmark {
   background-color: #776fff;
   border: 1px solid #776fff;
 }
@@ -2021,7 +2025,7 @@ td {
 /* Create the checkmark/indicator (hidden when not checked) */
 
 /* Show the checkmark when checked */
-.container-custom-checkbox input:checked~.checkmark:after {
+.container-custom-checkbox input:checked ~ .checkmark:after {
   display: block;
 }
 
@@ -2057,7 +2061,7 @@ td {
   margin-bottom: 0px !important;
 }
 
-.box-bottom-bar .field-check-box input[type="checkbox"]:checked+label {
+.box-bottom-bar .field-check-box input[type="checkbox"]:checked + label {
   background-image: url(../images/enable-check.png);
 }
 
@@ -2098,8 +2102,6 @@ td {
   border-bottom: 1px solid #d4d4d4;
   padding-bottom: 20px;
 
-
-
   .right-part-item {
     display: flex;
 
@@ -2119,7 +2121,8 @@ td {
         font-size: 14px;
       }
 
-      h3 {}
+      h3 {
+      }
 
       .color-text {
         margin-top: 5px;
@@ -2173,7 +2176,7 @@ td {
   padding: 0px;
   position: absolute;
   border-radius: 0px 0px 6px 6px;
-
+  overflow: hidden;
 }
 
 .notifi-scroll {
@@ -2230,7 +2233,6 @@ td {
     font-size: 13px;
   }
 }
-
 
 .notification-box-gray {
   color: #8c8c8c !important;
