--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #e2f209; }
+  background: #9ff88b; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #e2f9ae; }
+  background: #faa4f4; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #48e5c7; }
+  background: #fff8e8; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #2e1852; }
+  background: #dc8577; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #de495f; }
+  background: #c81f6c; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #2ea86b; }
+  background: #cb0d38; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #f5301c; }
+  background: #58e695; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #4a382c; }
+  background: #165749; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #bf7776; }
+  background: #f810dd; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #df7a13; }
+  background: #6c4fe8; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #8f5226; }
+  background: #1e7719; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #a5631b; }
+  background: #3ce3f8; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #6f640d; }
+  background: #b9ac42; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #465cfb; }
+  background: #7a2bf9; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #6c22ef; }
+  background: #4ff9ef; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #094d14; }
+  background: #f63c62; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #fe8901; }
+  background: #b94393; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #d640df; }
+  background: #014d07; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #95955a; }
+  background: #75fa30; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #137f11; }
+  background: #562587; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #69e6af; }
+  background: #0fa664; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #101806; }
+  background: #1ba282; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #583fc1; }
+  background: #54c5b4; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #d6b2da; }
+  background: #f3f15e; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #86859b; }
+  background: #739111; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #28c37a; }
+  background: #b71de3; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #91d87f; }
+  background: #075205; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #1c259f; }
+  background: #4ef022; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #251b4a; }
+  background: #c8467d; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #52ac06; }
+  background: #5733ca; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #17a0bb; }
+  background: #c9b4e2; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #d72ca3; }
+  background: #72a6f0; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #263a2d; }
+  background: #a57446; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #d95fca; }
+  background: #d76c49; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #947036; }
+  background: #157f9a; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #71c42c; }
+  background: #cb596b; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #3dd497; }
+  background: #4e91ee; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #02c12a; }
+  background: #996885; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #e4125e; }
+  background: #8f95c3; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #36532b; }
+  background: #62414d; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #7c4f72; }
+  background: #eb7c95; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #8c2030; }
+  background: #d72e59; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #87617b; }
+  background: #a40e77; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #88fb42; }
+  background: #72bd67; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #25090f; }
+  background: #9e8234; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #6bd044; }
+  background: #ca94c5; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #f9db3b; }
+  background: #cf34db; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #5924f6; }
+  background: #4c3d03; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #22dc95; }
+  background: #593827; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #c08942; }
+  background: #938bf7; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #b1e346; }
+  background: #369cc9; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #556fe1; }
+  background: #1f7158; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #eeb03b; }
+  background: #335c93; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #cd15f6; }
+  background: #12b235; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #e7c54e; }
+  background: #518622; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #d2d005; }
+  background: #85e7b2; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #5e9fea; }
+  background: #a4f3b2; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #0a0665; }
+  background: #6375e4; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #e2c0e1; }
+  background: #a12090; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #a01028; }
+  background: #76b80e; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #de2fce; }
+  background: #b3679a; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #c61f58; }
+  background: #bfb4a0; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #5b6a41; }
+  background: #1ce963; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #37a003; }
+  background: #c3a0c0; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #e11d0f; }
+  background: #99d825; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #ae6c27; }
+  background: #4ea305; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #98e1db; }
+  background: #90558f; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #a36be3; }
+  background: #429edd; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #acdacc; }
+  background: #2d2392; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #a8b7e1; }
+  background: #8e15e3; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #796926; }
+  background: #62d724; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #49cdb2; }
+  background: #983982; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #bd4402; }
+  background: #997651; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #f31bd0; }
+  background: #47f642; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #57f4f5; }
+  background: #8960e1; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #44e450; }
+  background: #62d4fc; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #170f62; }
+  background: #4d92f0; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #c32a81; }
+  background: #a2c171; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #3a439d; }
+  background: #abf87d; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #7849b0; }
+  background: #dad2d4; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #28dc58; }
+  background: #d7c112; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #fd582d; }
+  background: #36cf22; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #d1a007; }
+  background: #ff97e9; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #02a403; }
+  background: #556ec4; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #7e9db9; }
+  background: #677602; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #23e2b3; }
+  background: #2d535a; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #08e910; }
+  background: #20922d; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #43d67b; }
+  background: #c665b9; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #aae92b; }
+  background: #cc5523; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #efea45; }
+  background: #d38766; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #595e79; }
+  background: #beb2ee; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #0f9885; }
+  background: #a221d9; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #20c473; }
+  background: #342a90; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #5cc39c; }
+  background: #c2b723; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #5bb0fb; }
+  background: #039736; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #25901e; }
+  background: #3f489c; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #197010; }
+  background: #1ce5ff; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #145136; }
+  background: #9f0827; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #7f42bc; }
+  background: #177e5d; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #bf8670; }
+  background: #3edaee; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12532,6 +12532,7 @@ td .check-container {
   height: 300px; }
 
 .dropdown-menu1 {
+  background: #fff;
   top: 8px;
   right: -65px;
   left: unset;
