--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #9ff88b; }
+  background: #0ef14b; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #faa4f4; }
+  background: #be6c47; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #fff8e8; }
+  background: #03d77a; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #dc8577; }
+  background: #dd89c6; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #c81f6c; }
+  background: #0a5292; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #cb0d38; }
+  background: #b03e38; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #58e695; }
+  background: #01f203; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #165749; }
+  background: #adafb8; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #f810dd; }
+  background: #8712ef; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #6c4fe8; }
+  background: #e6f427; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #1e7719; }
+  background: #553212; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #3ce3f8; }
+  background: #192dc7; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #b9ac42; }
+  background: #f30cf9; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #7a2bf9; }
+  background: #0537ca; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #4ff9ef; }
+  background: #faeacd; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #f63c62; }
+  background: #df72b4; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #b94393; }
+  background: #5380d1; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #014d07; }
+  background: #a28659; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #75fa30; }
+  background: #173012; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #562587; }
+  background: #16678e; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #0fa664; }
+  background: #43c1d8; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #1ba282; }
+  background: #3696a2; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #54c5b4; }
+  background: #e28716; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #f3f15e; }
+  background: #bf150d; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #739111; }
+  background: #e7cee9; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #b71de3; }
+  background: #85b2a9; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #075205; }
+  background: #01ae21; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #4ef022; }
+  background: #af8b55; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #c8467d; }
+  background: #d41fd1; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #5733ca; }
+  background: #8c8a39; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #c9b4e2; }
+  background: #3e8be6; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #72a6f0; }
+  background: #a01073; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #a57446; }
+  background: #8b9712; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #d76c49; }
+  background: #edfcb5; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #157f9a; }
+  background: #dc4871; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #cb596b; }
+  background: #5b3449; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #4e91ee; }
+  background: #06153f; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #996885; }
+  background: #f74d5a; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #8f95c3; }
+  background: #8e0bb5; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #62414d; }
+  background: #f19497; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #eb7c95; }
+  background: #5cb8a4; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #d72e59; }
+  background: #6c7410; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #a40e77; }
+  background: #bbd492; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #72bd67; }
+  background: #70cebe; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #9e8234; }
+  background: #ee06bd; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #ca94c5; }
+  background: #5e1765; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #cf34db; }
+  background: #4339d3; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #4c3d03; }
+  background: #8f881c; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #593827; }
+  background: #0bebbd; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #938bf7; }
+  background: #3ffa12; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #369cc9; }
+  background: #1cb096; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #1f7158; }
+  background: #d8a081; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #335c93; }
+  background: #8b8b20; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #12b235; }
+  background: #a07109; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #518622; }
+  background: #404f9b; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #85e7b2; }
+  background: #a10bd5; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #a4f3b2; }
+  background: #d13958; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #6375e4; }
+  background: #ec2949; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #a12090; }
+  background: #27f0d8; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #76b80e; }
+  background: #abca76; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #b3679a; }
+  background: #597315; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #bfb4a0; }
+  background: #f4a779; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #1ce963; }
+  background: #6e543c; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #c3a0c0; }
+  background: #243af5; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #99d825; }
+  background: #c5accc; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #4ea305; }
+  background: #606917; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #90558f; }
+  background: #6826e1; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #429edd; }
+  background: #b791b4; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #2d2392; }
+  background: #94c04d; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #8e15e3; }
+  background: #1cdf05; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #62d724; }
+  background: #400b14; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #983982; }
+  background: #7444eb; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #997651; }
+  background: #09ff87; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #47f642; }
+  background: #502f3e; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #8960e1; }
+  background: #511f17; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #62d4fc; }
+  background: #15ab89; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #4d92f0; }
+  background: #b03333; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #a2c171; }
+  background: #789b72; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #abf87d; }
+  background: #a319c3; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #dad2d4; }
+  background: #12108e; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #d7c112; }
+  background: #0abb44; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #36cf22; }
+  background: #a26bbb; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #ff97e9; }
+  background: #162bb7; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #556ec4; }
+  background: #29b4bb; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #677602; }
+  background: #c56080; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #2d535a; }
+  background: #58b1e3; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #20922d; }
+  background: #c1f7aa; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #c665b9; }
+  background: #13cc14; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #cc5523; }
+  background: #4c17a0; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #d38766; }
+  background: #1fb495; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #beb2ee; }
+  background: #110ec5; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #a221d9; }
+  background: #c07cde; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #342a90; }
+  background: #3e0383; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #c2b723; }
+  background: #ccfbca; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #039736; }
+  background: #f5ea04; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #3f489c; }
+  background: #65f631; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #1ce5ff; }
+  background: #e57603; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #9f0827; }
+  background: #45fe9d; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #177e5d; }
+  background: #28a237; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #3edaee; }
+  background: #61ddc7; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12549,11 +12549,11 @@ td .check-container {
   overflow-y: auto;
   border-radius: 0px 0px 6px 6px; }
 
-.dropdown-menu1:before {
+.notification-dropdow-div:before {
   content: "";
   position: absolute;
-  top: -20px;
-  right: 43px;
+  top: -12px;
+  right: -22px;
   border: 10px solid #56bcd9;
   border-color: transparent transparent #56bcd9 transparent; }
 
