--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -2186,11 +2186,11 @@ td {
   border-radius: 0px 0px 6px 6px;
 }
 
-.dropdown-menu1:before {
+.notification-dropdow-div:before {
   content: "";
   position: absolute;
-  top: -20px;
-  right: 43px;
+  top: -12px;
+  right: -22px;
   border: 10px solid #56bcd9;
   border-color: transparent transparent #56bcd9 transparent;
 }
